posts router and documentation added
