# src/routes/login.ts
@@ -5,13 +5,34 @@ import { loginAuthor } from "../controllers/index"
 
 
 
-router.route("/login")
+router.route("/authors/login")
     .post((req: Request, res: Response) => {
-        /*    #swagger.parameters['obj'] = {
-                        in: 'body',
-                        description: 'Login a user',
-                        schema: { $ref: '#/definitions/loginUser' }
-                } */
+        /* 
+         #swagger.tags = ['Authors']
+        #swagger.summary = 'Login an author...'
+        
+        #swagger.parameters['email'] = {
+        in: 'query',
+        name:'email',
+        description: 'The email for login',
+        required:true,
+        type: 'string',
+        schema: {
+            type:'string'
+        }
+    }
+        
+        
+        #swagger.parameters['password'] = {
+        in: 'query',
+        name:'password',
+        description: 'The password for login',
+        required:true,
+        type: 'string',
+        schema: {
+            type:'string'
+        }
+        } */
         loginAuthor(req, res)
     })
 
